@@ -10,6 +10,15 @@ package TestCase::Literal::String {
         return 0;
       }
     }
+
+    # String literal last allow $
+    {
+      my $str = "aaaa$";
+      
+      unless ($str->[4] == '$') {
+        return 0;
+      }
+    }
     
     return 1;
   }
